# medical-image-preprocessing

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: histology_standard.yaml  xray_standard.yaml
examples/: run_with_report.py  run_xray_pipeline.py
medpreprocess/: cli.py  pipeline.py  reporter.py
medpreprocess/steps/: __init__.py  artifact.py  base.py  clahe.py  denoise.py  normalize.py  resize.py
tests/: conftest.py  test_pipeline.py  test_reporter.py  test_smoke.py  test_steps.py
tests/fixtures/: generate_fixture.py
