[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medpreprocess"
version = "0.1.0"
description = "Config-driven medical image preprocessing pipelines with metadata sidecars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.8",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.5",
    "numpy>=1.26",
]

[project.scripts]
medpreprocess = "medpreprocess.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["medpreprocess*"]
